2008-05-29  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Adam Roben.

        Fix run-iexploder-tests and run-mangleme-tests to work with updated shared scripts and
        configuration files.

        * Scripts/run-iexploder-tests:
        * Scripts/run-mangleme-tests:
        Renamed runSafari to not conflict with the one in webkitdirs.
        Added SSLCertificateFile option for httpd, as now needed.

2008-05-27  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. Update the sample app after wxWebFrame->wxWebBrowserShell rename.

        * wx/browser/browser.cpp:
        (MyApp::OnInit):

2008-05-24  Andreia Gaita  <shana@isninja.com>

        Reviewed by Alp Toker.

        cygwin-downloader.py fixes.

        Remove two non-working mirrors. Add a check for missing dependency
        packages to avoid bailing out on an inconsistent Cygwin package list.

        * CygwinDownloader/cygwin-downloader.py:

2008-05-24  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Darin Adler.

        Remove useQmake usage. QMake build doesn't support Gtk port
        anymore.

        Also fix 2 occurences of "Web Kit". Should be WebKit.

        * Scripts/build-webkit:
        * Scripts/run-javascriptcore-tests:
        * Scripts/run-launcher:
        * Scripts/run-webkit-tests:
        * Scripts/webkitdirs.pm:

2008-05-22  Stephanie Lewis  <slewis@apple.com>

        Reviewed by Dan.

        implement the beforeUnload UI delegate so that DRT will dispatch beforeunload events.

        * DumpRenderTree/mac/UIDelegate.mm:
        (-[UIDelegate webView:runBeforeUnloadConfirmPanelWithMessage:initiatedByFrame:]):
        * DumpRenderTree/win/UIDelegate.cpp:
        (SearchableWebViewHost::runBeforeUnloadConfirmPanelWithMessage):

2008-05-21  Adele Peterson  <adele@apple.com>

        Reviewed by Adam.

        DumpRenderTree support for <rdar://problem/5787733> fast/dom/HTMLDocument/hasFocus.html fails on Windows
